# OxbotsSimulator

./: Overall Unibots Benchmark v1.xlsx  Overall Unibots Benchmark.xlsx  README.md  config.json
ROS/: README.md  deploy_and_run_ros_pi.sh
ROS/unibots_file_bridge/: README.md  package.xml  setup.cfg  setup.py
ROS/unibots_file_bridge/config/: params.yaml
ROS/unibots_file_bridge/launch/: unibots_file_bridge.launch.py
ROS/unibots_file_bridge/resource/: unibots_file_bridge
ROS/unibots_file_bridge/unibots_file_bridge/: decision_node.py  file_bridge_node.py  waypoints_cruise_ros.py
benchmarks/: Unibots Benchmark v1.xlsx  Unibots Benchmark v2.xlsx
decision_making/: radar_memory.txt  search_state.txt  waypoints_cruise.py  waypoints_stack.txt
decision_making_cyc/: mode.txt  planned_waypoints.txt  waypoints_cruise.py  ~$Comparison.xlsx
decision_making_ros/: waypoints_cruise.py
decision_making_wly/: waypoints_cruise.py
decision_making_xjj/: waypoints_cruise.py
pose_estimation/: camera_info.json  generate_camera_intrinsics.py  pose_estimation.py  tag_world_map.json
protos/: AprilTagWall.proto  Cube-Robot.proto  E-puck.proto  Obstacle-Cube-Robot.proto  Pingball.proto  SteelBall.proto  UnibotsArena.proto  UnibotsBalls.proto  UnibotsBallsRandom.proto  generate_balls_proto.py
rpi5/: README_WEB_RUNTIME.md  deploy_and_run_web_pi.sh  run_motor.py
textures/: Apriltag Print.docx
tools/: generate_random_balls_proto.py
worlds/: .Arena_Development.wbproj  .Decision_making.wbproj  .Greedy.wbproj  .Run.wbproj  .moose_demo.wbproj  Arena_Development.wbt  Greedy.wbt  (+2 more)
(+180 files in other folders)
