<?xml version="1.0"?>
<package format="3">
  <name>unibots_file_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy file bridge and decision node for UniBots simulator.</description>
  <maintainer email="you@example.com">UniBots Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
